ref: user modile layout bug fixed

--- a/src/components/Quiz/QuizCard/QuizCard.module.scss
+++ b/src/components/Quiz/QuizCard/QuizCard.module.scss
@@ -87,7 +87,7 @@
 
 @media only screen and (max-width: 808px) {
     .card {
-        width: 280px;
+        width: 250px;
     }
 }
 
