--- a/src/pages/user/index.module.scss
+++ b/src/pages/user/index.module.scss
@@ -1,6 +1,7 @@
 .home {
     display: grid;
     row-gap: 2.5vh;
+    width: 100%;
 
     ul {
         justify-content: center;
@@ -76,7 +77,7 @@
         ul {
             grid-template-columns: repeat(
                 auto-fill,
-                minmax(280px, max-content)
+                minmax(250px, max-content)
             );
         }
     }
